# pixel8

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  release-plz.toml
.cargo/: config.toml
.github/: Pixel8.sh  build-example-carts.sh  build-handheld.sh  build-index.sh
.github/workflows/: build-player.yml  ci.yml  deploy-examples.yml  deploy-site.yml
book/: README.md  book.toml  custom.css
book/src/: SUMMARY.md  audio.md  console.md  drawing.md  examples.md  first-cart.md  going-further.md  input.md  installation.md  introduction.md  limits.md  pico8.md  sharing.md  storage.md
docs/: ABI.md  ANNOUNCEMENT.md  ARCHITECTURE.md  CART_FORMAT.md  CLIPBOARD_FORMAT.md  HANDHELD.md  LIMITS.md  LIMITS_TESTING.md  PICO8_IMPORT.md  TUI.md  WEB_EXPORT.md
examples/music_demo/: Cargo.toml  assets.pixel8  assets.pixel8.json
examples/music_demo/src/: lib.rs
examples/platformer/: Cargo.toml  assets.pixel8  assets.pixel8.json
examples/platformer/src/: badie.rs  constants.rs  game_mode.rs  hero.rs  lib.rs  taken.rs
examples/sfx_demo/: Cargo.toml  assets.pixel8  assets.pixel8.json
examples/sfx_demo/src/: lib.rs
examples/sprite_move/: Cargo.toml  assets.pixel8  assets.pixel8.json
examples/sprite_move/src/: lib.rs
examples/stress/: Cargo.toml  assets.pixel8  assets.pixel8.json
examples/stress/src/: lib.rs
pixel8/: CHANGELOG.md  Cargo.toml
pixel8-console/: CHANGELOG.md  Cargo.toml
pixel8-console/src/: builder.rs  gpu.rs  lib.rs  main.rs  shell.rs  ui.rs  watch.rs  webexport.rs
pixel8-console/src/editor/: code.rs  file_picker.rs  map.rs  music.rs  sfx.rs  sprite.rs
pixel8-player/: CHANGELOG.md  Cargo.toml
pixel8-player/src/: app.rs  main.rs  picker.rs  platform.rs
pixel8-player/src/platform/: alsa.rs  blit.rs  evdev.rs  kms.rs  null.rs  window.rs
pixel8-runtime/: CHANGELOG.md  Cargo.toml
pixel8-runtime/examples/: render_audio.rs
pixel8-runtime/src/: assets.rs  audio.rs  cart.rs  clipboard.rs  fb.rs  font.rs  lib.rs  palette.rs  pico8.rs  project.rs  storage.rs  ui.rs  vm.rs  wire.rs
pixel8-runtime/src/pico8/: clipboard.rs
pixel8-tui/: CHANGELOG.md  Cargo.toml  README.md
pixel8-tui/src/: main.rs  raw_keys.rs  tui.rs
pixel8-web/: Cargo.toml
pixel8-web/src/: lib.rs
pixel8/src/: ffi.rs  fmt.rs  glue.rs  lib.rs  memstat.rs  motion.rs  storage.rs
pixel8/tests/: glob_import.rs
rico8-console/src/editor/: sprite.rs
rico8-web/: Cargo.toml
scripts/: build-example-carts.sh  build-handheld.sh  build-index.sh  build-site.sh
