[workspace]
resolver = "2"
members = [
    "pixel8",
    "pixel8-console",
    "pixel8-web",
    "pixel8-player",
    "pixel8-runtime",
]
# Example carts are standalone crates built for wasm32-unknown-unknown,
# either from inside Pixel8 or with `cargo build --target wasm32-unknown-unknown`.
exclude = ["examples"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/zeenix/pixel8"

[workspace.dependencies]
pixel8-runtime = { path = "pixel8-runtime", default-features = false }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
# No `wat`: carts are always binary wasm (text format is test-only).
wasmi = { version = "0.51", default-features = false, features = ["std"] }
winit = "0.30"
# Default minus `webgpu`: that backend only exists for wasm targets,
# and the console never compiles to wasm (the web player uses no GPU).
wgpu = { version = "29", default-features = false, features = [
    "std",
    "parking_lot",
    "wgsl",
    "vulkan",
    "gles",
    "dx12",
    "metal",
] }
cpal = "0.18"
crc32fast = "1"
miniz_oxide = "0.9"
pollster = "0.4"
serde_json = { version = "1.0.150", features = ["preserve_order"] }
base64 = "0.22.1"

[profile.release]
opt-level = 3

# Size-optimized profile for the browser player (`export-web`).
[profile.web-release]
inherits = "release"
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "abort"
