[package]
name = "pixel8-console"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Pixel8: a PICO-8-like fantasy console for Rust games"
readme = "README.md"

# The package is pixel8-console; the command you type is `pixel8`.
[[bin]]
name = "pixel8"
path = "src/main.rs"

[features]
default = ["audio", "window"]
# Disable for machines without audio (e.g. no ALSA headers on Linux).
audio = ["pixel8-runtime/audio"]
# The windowed frontend (winit + wgpu). Without it the `pixel8` binary
# still builds with every headless subcommand — CI uses that to orchestrate
# cart builds cheaply — and other frontends (the `pixel8-tui` crate) depend
# on this crate's library with the feature off, never building the GPU
# stack.
window = ["dep:winit", "dep:wgpu", "dep:pollster"]

[dependencies]
pixel8-runtime.workspace = true
anyhow.workspace = true
winit = { workspace = true, optional = true }
wgpu = { workspace = true, optional = true }
pollster = { workspace = true, optional = true }
arboard = { version = "3.6", default-features = false, features = ["wayland-data-control"] }

[dev-dependencies]
# Hand-written WAT carts for shell tests, as in pixel8-runtime's VM tests.
wat = "1"
