[package]
name = "pixel8"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Pixel8 fantasy console SDK: write carts in Rust, compile to wasm32-unknown-unknown"
readme = "README.md"

[features]
default = ["std"]
# When disabled the SDK is `#![no_std]` and provides a panic handler, so carts
# can be allocation-free with `heapless`. Enabled by default; do-nothing carts
# stay on `std`.
std = []

# Deliberately dependency-free: game carts build for
# wasm32-unknown-unknown against this crate and nothing else.
[dependencies]

# Tests only (carts never see dev-dependencies): pins the SDK's stack-buffer
# JSON codec against the host's serde_json canonicalization.
[dev-dependencies]
serde_json.workspace = true
