[package]
name = "sfx_demo"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
pixel8 = { path = "../../pixel8", default-features = false }

# Standalone workspace: example carts build independently of the
# pixel8 workspace, exactly like projects created with `new`.
[workspace]

[profile.release]
opt-level = "s"
lto = true
panic = "abort"
